--- a/templates/ffg-actor-sheet.html
+++ b/templates/ffg-actor-sheet.html
@@ -113,16 +113,66 @@
         {{!-- Owned Items Tab --}}
         <div class="tab items" data-group="primary" data-tab="items">
             <ol class="items-list">
-                {{#each actor.items as |item id|}}
-                <li class="item flexrow" data-item-id="{{item._id}}">
+                <div class="weapon-list" style="background-color: rgb(0, 255, 0);">
+                    <h4>HERE BE WEAPONS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'weapon'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <div class="weapon-list" style="background-color: rgb(255, 0, 191);">
+                    <h4>HERE BE ARMOR</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'armor'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <div class="weapon-list" style="background-color: rgb(0, 255, 255);">
+                    <h4>HERE BE ITEMS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'item'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <!-- <li class="item flexrow" data-item-id="{{item._id}}">
                     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                     <h4 class="item-name">{{item.name}}</h4>
                     <div class="item-controls">
                         <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                         <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                     </div>
-                </li>
-                {{/each}}
+                </li> -->
+                
             </ol>
         </div>
 
@@ -163,68 +213,31 @@
         </div>
 
 
-        <div class="tab stats" data-group="primary" data-tab="stats">
-
-            <table>
-                <thead>
-                    <tr>
-                        <td>Name</td>
-                        <td>Value</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Soak</td>
-                        <td>
-                            <input name="data.stats.soak.value" value="{{data.stats.soak.value}}" type="number" min="0"
-                                max="10" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Defence - Ranged</td>
-                        <td>
-                            <input name="data.stats.defence.ranged" value="{{data.stats.defence.ranged}}" type="number" min="0"
-                                max="5" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Defence - Melee</td>
-                        <td>
-                            <input name="data.stats.defence.melee" value="{{data.stats.defence.melee}}" type="number" min="0"
-                                max="5" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Encumbrance - Value</td>
-                        <td>
-                            <input name="data.stats.encumbrance.value" value="{{data.stats.encumbrance.value}}" type="number" min="0"
-                                max="10" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Encumbrance - Max</td>
-                        <td>
-                            <input name="data.stats.encumbrance.max" value="{{data.stats.encumbrance.max}}" type="number" min="0"
-                                max="10" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>ForcePool - Value</td>
-                        <td>
-                            <input name="data.stats.forcePool.value" value="{{data.stats.forcePool.value}}" type="number" min="0"
-                                max="10" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>ForcePool - Max</td>
-                        <td>
-                            <input name="data.stats.forcePool.max" value="{{data.stats.forcePool.max}}" type="number" min="0"
-                                max="10" data-dtype="Number" placeholder="0" />
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-
+        {{!-- Crits Tab --}}
+        <div class="tab crits" data-group="primary" data-tab="crits">
+            <ol class="items-list">
+                <div class="weapon-list" style="background-color: rgb(248, 38, 1);">
+                    <h4>HERE BE CRITS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'crit'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4>{{item.data.number}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.name}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.data.difficulty}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.data.description}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+            </ol>
         </div>
 
     </section>
