--- a/templates/items/crit.html
+++ b/templates/items/crit.html
@@ -1,6 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
     <header class="sheet-header">
-        <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
         <div class="header-fields">
             <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
             <div class="resource">
@@ -10,6 +9,10 @@
             <div class="resource">
             	<label>Weight</label>
                 <input type="text" name="data.weight" value="{{data.weight}}" data-dtype="Number"/>
+            </div>
+            <div class="resource">
+            	<label>Difficulty</label>
+                <input type="text" name="data.difficulty" value="{{data.difficulty}}" data-dtype="Number"/>
             </div>
         </div>
     </header>
