--- a/templates/ffg-actor-sheet.html
+++ b/templates/ffg-actor-sheet.html
@@ -201,8 +201,58 @@
         {{!-- Owned Items Tab --}}
         <div class="tab items" data-group="primary" data-tab="items">
             <ol class="items-list">
-                {{#each actor.items as |item id|}}
-                <li class="item flexrow" data-item-id="{{item._id}}">
+                <div class="weapon-list" style="background-color: rgb(0, 255, 0);">
+                    <h4>HERE BE WEAPONS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'weapon'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <div class="weapon-list" style="background-color: rgb(255, 0, 191);">
+                    <h4>HERE BE ARMOR</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'armor'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <div class="weapon-list" style="background-color: rgb(0, 255, 255);">
+                    <h4>HERE BE ITEMS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'item'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}} PEW PEW</h4>
+                        <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
+                        <h4 class="item-name">{{item.data.weight}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+                <!-- <li class="item flexrow" data-item-id="{{item._id}}">
                     <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                     <h4 class="item-name">{{item.name}}</h4>
                     <input class="item-name" name="actor.items.{{id}}.data.quantity" value="{{item.data.quantity}}"></h4>
@@ -211,8 +261,8 @@
                         <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                         <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                     </div>
-                </li>
-                {{/each}}
+                </li> -->
+                
             </ol>
         </div>
 
@@ -258,8 +308,31 @@
         </div>
 
 
-        {{!-- Stats Tab --}}
+        {{!-- Crits Tab --}}
         <div class="tab crits" data-group="primary" data-tab="crits">
+            <ol class="items-list">
+                <div class="weapon-list" style="background-color: rgb(248, 38, 1);">
+                    <h4>HERE BE CRITS</h4>
+                    {{#each actor.items as |item id|}}
+                    {{#ifEquals item.type 'crit'}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4>{{item.data.number}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.name}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.data.difficulty}}</h4>
+                        <div class="divider"></div>
+                        <h4>{{item.data.description}}</h4>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/ifEquals}}
+                    {{/each}}
+                </div>
+            </ol>
         </div>
 
     </section>
