--- a/styles/simple.css
+++ b/styles/simple.css
@@ -7,6 +7,91 @@
     justify-content: flex-start;
 }
 
+.wflexrow{
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-basis: 80%;
+    padding-right: 15px;
+}
+
+.itemParentDiv{
+    padding-top: 10px;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    align-items: baseline;
+}
+
+.itemParentDiv > *{
+    float: left;
+}
+
+
+.witem{
+    flex-basis: 33%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.witem .value{
+    margin: 0px;
+    padding-top: 2px;
+    text-transform: capitalize;
+}
+
+.witem .title{
+    margin: 0px;
+    border-bottom: 1px solid;
+}
+
+.wflexrow .type{
+    top: 50%;
+    transform: translateY(-50%)
+               translateX(-50%);
+}
+
+.item-stat-box{
+    box-sizing: content-box;
+    border: solid #4B596D 2px;
+    width: fit-content;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+
+.wdice-pool{
+    max-height: 3.7em;
+    overflow: auto;
+    margin-top: 5px;
+}
+
+.itemImg{
+    height: 25px;
+    width: 25px;
+}
+
+.alignMiddle{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.wdice-pool img{
+    max-width: 20px;
+    max-height: 20px;
+    width: auto;
+    height: auto;
+    margin-right: unset;
+    border: unset;
+}
+
+
 .soak{
     height: 44px;
     width: 230px;
@@ -30,7 +115,7 @@
 
 .swffg.sheet.actor{
     min-width: 650px;
-    max-width: 1090px;
+    max-width: 870px;
 }
 
 .swffg.sheet .profile-img {
@@ -120,20 +205,22 @@ sheet work. There is likely a better way to do this.
     overflow-y: auto;
 }
 .swffg.sheet .items-list .item {
-    height: 30px;
+    height: auto;
     line-height: 24px;
     padding: 3px 0;
-    border-bottom: 1px solid #BBB;
+    border-bottom: 1px solid dimgray;
 }
-.swffg.sheet .items-list .item img {
-    flex: 0 0 24px;
-    margin-right: 5px;
-}
+
 .swffg.sheet .items-list .item-name {
+    flex-basis: 15%;
     margin: 0;
+    max-height: 150px;
+    overflow: auto;
+    overflow-wrap: break-word;
 }
 .swffg.sheet .items-list .item-controls {
     flex: 0 0 36px;
+    flex-basis: 5%;
 }
 
 /* Attributes */
